// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EventCard Component > matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative text-decoration-none bg-white"
  >
    <div
      class="relative rounded-lg sm:w-80 border p-2 transition-transform transform hover:bg-gray-100"
    >
      <div
        class="flex flex-col h-full items-start space-y-4"
      >
        <div
          class="relative flex justify-center w-full"
        >
          <div
            class="relative"
          >
            <img
              class="mx-auto aspect-video rounded-xl object-cover w-full h-40"
            />
            <p
              class="absolute top-0 bg-blue-600 text-white font-semibold py-1 px-3 rounded-br-lg rounded-tl-lg"
            >
              FREE
            </p>
          </div>
        </div>
        <div
          class="flex-1 flex flex-col w-full space-y-2"
        >
          <h3
            class="text-xl font-bold text-gray-800"
          />
          <div
            class="flex mt-1 items-center space-x-2"
          >
            <svg
              class="lucide lucide-user h-4 w-4 text-gray-500"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
            <small
              class="text-sm text-gray-500"
            />
          </div>
          <div
            class="flex mt-2 items-center space-x-2"
          >
            <svg
              class="h-4 w-4 text-gray-500"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
            <small
              class="text-sm text-gray-500"
            >
              2024-10-23  - 
            </small>
          </div>
          <div
            class="flex mt-2 items-center space-x-2"
          >
            <svg
              class="h-4 w-4 text-gray-500"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="2"
                x2="5"
                y1="12"
                y2="12"
              />
              <line
                x1="19"
                x2="22"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="5"
              />
              <line
                x1="12"
                x2="12"
                y1="19"
                y2="22"
              />
              <circle
                cx="12"
                cy="12"
                r="7"
              />
            </svg>
            <small
              class="text-sm text-gray-500"
            />
          </div>
          <div
            class="flex mt-2 items-center space-x-2"
          >
            <svg
              class="h-4 w-4 text-gray-500"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="20"
                x="2"
                y="7"
              />
              <path
                d="M16 3h4v4M8 3h8v4M2 3h4v4"
              />
            </svg>
            <small
              class="text-sm text-gray-500"
            >
              Categories: N/A
            </small>
          </div>
          <div
            class="flex mt-2 items-center space-x-2"
          >
            <svg
              class="h-4 w-4 text-gray-500"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="7"
                r="4"
              />
              <path
                d="M5.5 20.5a8.38 8.38 0 0 1 13 0"
              />
            </svg>
            <small
              class="text-sm text-gray-500"
            >
              /Unlimited Attendees
            </small>
          </div>
          <div
            class="flex mt-2 items-center space-x-2"
          >
            <svg
              class="h-4 w-4 text-green-600"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="8"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="8"
              />
              <path
                d="M8 12h2M14 12h2M4 12h.01M20 12h.01"
              />
            </svg>
            <small
              class="text-sm font-bold text-green-600"
            >
              Ticket Price: $
            </small>
          </div>
          <div
            class="mt-3 w-full flex space-x-2"
          >
            <button
              class="self-start inline-flex justify-center text-base sm:text-xl w-full bg-yellow-500 hover:bg-yellow-600 text-white py-2 rounded-xl shadow-md transition duration-200"
            >
              Edit
            </button>
            <button
              class="self-start inline-flex justify-center sm:text-xl w-full bg-red-500 hover:bg-red-600 text-white py-2 rounded-xl shadow-md transition duration-200"
            >
              Cancel Event
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`User EventCard Component > matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative text-decoration-none bg-white"
  >
    <div
      class="relative rounded-lg sm:w-80 border p-2 transition-transform transform hover:bg-gray-100"
    >
      <div
        class="flex flex-col h-full items-start space-y-4"
      >
        <div
          class="relative flex justify-center w-full"
        >
          <div
            class="relative"
          >
            <img
              alt="Sample Event"
              class="mx-auto aspect-video rounded-xl object-cover w-full h-40"
              src="https://example.com/image.jpg"
            />
            <p
              class="absolute top-0 bg-green-600 text-white font-semibold py-1 px-3 rounded-br-lg rounded-tl-lg"
            >
              $20
            </p>
            <p
              class="absolute top-0 right-0 bg-yellow-300 text-gray-800 font-semibold py-1 px-3 rounded-tr-lg rounded-bl-lg"
            >
              10%
            </p>
          </div>
        </div>
        <div
          class="flex-1 flex flex-col w-full space-y-2"
        >
          <h3
            class="text-xl font-bold text-gray-800"
          >
            Sample Event
          </h3>
          <div
            class="flex mt-1 items-center space-x-2"
          >
            <svg
              class="lucide lucide-user h-4 w-4 text-gray-500"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
            <small
              class="text-sm text-gray-500"
            >
              John Doe
            </small>
          </div>
          <div
            class="flex mt-2 items-center space-x-2"
          >
            <svg
              class="h-4 w-4 text-gray-500"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
            <small
              class="text-sm text-gray-500"
            >
              23/10/2024 10:00 - 14:00
            </small>
          </div>
          <div
            class="flex mt-2 items-center space-x-2"
          >
            <svg
              class="h-4 w-4 text-gray-500"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="2"
                x2="5"
                y1="12"
                y2="12"
              />
              <line
                x1="19"
                x2="22"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="5"
              />
              <line
                x1="12"
                x2="12"
                y1="19"
                y2="22"
              />
              <circle
                cx="12"
                cy="12"
                r="7"
              />
            </svg>
            <small
              class="text-sm text-gray-500"
            >
              123 Main St
            </small>
          </div>
          <div
            class="flex mt-2 items-center space-x-2"
          >
            <svg
              class="h-4 w-4 text-gray-500"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="20"
                x="2"
                y="7"
              />
              <path
                d="M16 3h4v4M8 3h8v4M2 3h4v4"
              />
            </svg>
            <small
              class="text-sm text-gray-500"
            >
              Categories: Music, Art
            </small>
          </div>
          <div
            class="flex mt-2 items-center space-x-2"
          >
            <svg
              class="h-4 w-4 text-gray-500"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="7"
                r="4"
              />
              <path
                d="M5.5 20.5a8.38 8.38 0 0 1 13 0"
              />
            </svg>
            <small
              class="text-sm text-gray-500"
            >
              50/100 Attendees
            </small>
          </div>
          <div
            class="flex mt-2 items-center space-x-2"
          >
            <svg
              class="h-4 w-4 text-gray-500"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12h18M3 6h18M5 6v16M19 6v16"
              />
              <path
                d="M3 6h18v4M8 6v12"
              />
            </svg>
            <small
              class="text-sm text-gray-500"
            >
              Food Stalls Available
            </small>
          </div>
          <div
            class="flex mt-2 items-center space-x-2"
          >
            <svg
              class="h-4 w-4 text-green-600"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="8"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="8"
              />
              <path
                d="M8 12h2M14 12h2M4 12h.01M20 12h.01"
              />
            </svg>
            <small
              class="text-sm font-bold text-green-600"
            >
              Ticket Price: $20
            </small>
          </div>
          <div
            class="mt-3 w-full flex space-x-2"
          >
            <button
              class="self-start inline-flex justify-center text-base sm:text-xl w-full bg-yellow-500 hover:bg-yellow-600 text-white py-2 rounded-xl shadow-md transition duration-200"
            >
              Edit
            </button>
            <button
              class="self-start inline-flex justify-center sm:text-xl w-full bg-red-500 hover:bg-red-600 text-white py-2 rounded-xl shadow-md transition duration-200"
            >
              Cancel Event
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
